# liionpack

./: .coverage  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README  README.md  README.rst  README2  abc.py  asv.conf.json  codecov.yml  environment.docs.yml  environment.yml  mkdocs.yml  paper.bib  paper.md  pyproject.toml  pytest.ini  requirements.txt  run_sript_load_netlist.py  run_sript_vanilla.py  setup.py
.github/: codecov.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: codecov.yml  periodic_benchmarks.yml  publish_pypi.yml  python-app.yml  run_benchmarks_over_history.yml  test_on_push.yml
benchmarks/: basic_benchmarks.py  benchmarks.py
docs/: about.md  contributing.md  index.md  install.md  mathjax-config.js  reference.md  requirements.txt
docs/examples/: 01 Getting Started.ipynb  01_Getting_Started.ipynb  02 Using inputs.ipynb  02_Using_inputs.ipynb  03 Experiments.ipynb  04 Initial SoC.ipynb  04_Initial_SoC.ipynb  05 Drive cycles.ipynb  05_Drive_cycles.ipynb  06 Changing a model.ipynb  07 Simulating a bespoke pack using an LTSpice netlist and custom heat transfer.ipynb  07 Visualizing larger packs.ipynb  08 Battery Pack Degradation Model.ipynb  08 SEI degradation model.ipynb  08_SEI_degradation_model.ipynb  09 Terminal locations.ipynb  09_Terminal_locations.ipynb  10 Power control.ipynb
docs/stylesheets/: extra.css
examples/: basic_16p2s.py  big_circuit.py  dask_solver.py  different_confiurations.py  different_initial_soc.py  draw_circuit.py  draw_terminals.py  drive_cycle.py  drive_cycle_comparison.py  liionpack_logo.py  load_4p1s.py  load_netlist.py  mixed_capacity.py  mixed_terminals.py  paper_example.py  power_controlled_circuit_solve.py  save_output.py  save_output_csv.py  step_external_variable.py  test_small_currents.py  thermal_external.py
examples/notebooks/: 01 Getting Started.ipynb  02 Simulating a bespoke pack using an LTSpice netlist and custom heat transfer.ipynb  02 Using inputs.ipynb  03 Experiments.ipynb  04 Initial SoC.ipynb  05 Drive cycles.ipynb  06 Changing a model.ipynb  07 Simulating a bespoke pack using an LTSpice netlist and custom heat transfer.ipynb
examples/scripts/: basic_16p2s.py  big_circuit.py  big_circuit_ray.py  compare_step_methods.py  dask_debug.py  dask_solver.py  draw_circuit.py  drive_cycle.py  liionpack_dask_multi_actor.py  load_netlist.py  run_sript_vanilla.py
liionpack/: __init__.py  batteryrig_utils.py  dask_actor.py  dask_utils.py  definitions.py  load_data.py  logger.py  netlist_utils.py  plots.py  protocols.py  ray_actor.py  sim_utils.py  simulations.py  solver_utils.py  solvers.py  utils.py
liionpack/circuits/: 4p1s.asc  4p1s.cir  4p1s.txt  AMMBa  AMMBa.asc  AMMBa.cir  AMMBa.cmp  AMMBa_terminals.asc  (+5 more)
paper/: paper.bib  paper.md
requirements/: conda_requirements.txt  test_requirements.txt
site/: 404.html  index.html  objects.inv  sitemap.xml
tests/: __init__.py  test_utils.py
(+21 files in other folders)
