[build-system]
requires = [
    "hatch-vcs",
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "liionpack"
description = "A battery pack simulator for PyBaMM"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Tom Tranter", email = "t.g.tranter@gmail.com" },
]
requires-python = ">=3.10, <3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dynamic = [
    "version",
]
dependencies = [
    "pybamm>=24.9",
    "Ipython",
    "lcapy",
    "matplotlib",
    "networkx",
    "numpy",
    "openpyxl",
    "pandas",
    "plotly",
    "ray",
    "redis",
    "scikit-spatial",
    "scipy",
    "textwrapper",
    "tqdm",
    "ipywidgets",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "nbmake",
]

[project.urls]
"Bug Tracker" = "https://github.com/pybamm-team/liionpack/issues"
Changelog = "https://github.com/pybamm-team/liionpack/blob/develop/CHANGELOG.md"
Documentation = "https://liionpack.readthedocs.io/en/latest/"
Homepage = "https://github.com/pybamm-team/liionpack"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "liionpack/_version.py"
